--- a/src/app/notfounded/notfounded.component.html
+++ b/src/app/notfounded/notfounded.component.html
@@ -1,1 +1,5 @@
-<p>notfounded works!</p>
+<div class="row">
+    <div class="col-12">
+        <h2 class="text-white text-center text-center mt-5">Page Not Found</h2>
+    </div>
+</div>
