--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,48 +1,50 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-          <a class="nav-link" (click)="open(content)">Create</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#">Logout</a>
-          </li>  
-      </ul>
-    </nav>
-<!-- create -->
+  <ul class="navbar-nav ml-auto">
+    <li class="nav-item">
+      <a class="nav-link" [routerLink]="['/']">home</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" [routerLink]="['/users']">List Users</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link active" (click)="open(content)">Create</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Logout</a>
+    </li>
+  </ul>
+</nav>
+<!-- create modal-->
 <ng-template #content let-modal>
+  <div class="header-modal"></div>
   <div class="modal-body">
-    <div class="row mt-5">
+    <div class="row">
       <div class="col-md-12">
-          <h2 class="text-center">Add User</h2>
-          <div class="card mt-3">
-              <div class="card-body">
-                <form [formGroup]="UserForm" (ngSubmit)="addUser()">
-                  <div class="form-group">
-                    <label class="col-md-4">firstName </label>
-                    <input type="text" class="form-control" formControlName="first_name" />
-                  </div>
-                  <div class="form-group">
-                    <label class="col-md-4">lastName </label>
-                    <input type="text" class="form-control" formControlName="last_name" />
-                  </div>
-                  <div class="form-group">
-                    <label class="col-md-4">email </label>
-                    <input type="email" class="form-control" formControlName="email" />
-                  </div>
-                  <div class="form-group">
-                    <label class="col-md-4">avater </label>
-                    <input type="url" class="form-control" formControlName="avatar" />
-                  </div>
-    
-                  <div class="form-group">
-                    <button type="submit" class="btn btn-primary col-md-4" [disabled]="UserForm.invalid">Add</button>
-                    <a [routerLink]="['/']">
-                      <button type="submit" class="btn btn-primary col-md-4 ml-1">Back</button>
-                    </a>
-                  </div>
-                </form>
-              </div>
-          </div>
+        <div class="mt-3">
+          <form [formGroup]="UserForm" (ngSubmit)="addUser()">
+            <div class="form-group">
+              <label>firstName </label>
+              <input type="text" class="form-control" formControlName="first_name" />
+            </div>
+            <div class="form-group">
+              <label>lastName </label>
+              <input type="text" class="form-control" formControlName="last_name" />
+            </div>
+            <div class="form-group">
+              <label>email </label>
+              <input type="email" class="form-control" formControlName="email" />
+            </div>
+            <div class="form-group">
+              <label>avater </label>
+              <input type="url" class="form-control" formControlName="avatar" />
+            </div>
+
+            <div class="form-group row justify-content-center">
+              <button type="submit" class="btn btn-outline-success border-0" [disabled]="UserForm.invalid">Add</button>
+              <button [routerLink]="['/']" class="btn btn-outline-danger border-0">Back</button>
+            </div>
+          </form>
+        </div>
       </div>
     </div>
   </div>
