--- a/src/app/users/users.component.css
+++ b/src/app/users/users.component.css
@@ -1,15 +1,9 @@
 
-.content {
-    background-image: url(https://picsum.photos/g/3000/2000);
-    background-size: cover;
-    background-position: center;
-    padding: 40px;
-  }
-  
+
   .our-team {
     padding: 30px 0 40px;
     margin-bottom: 30px;
-    background-color: #f7f5ec;
+    background-color: #fff;
     text-align: center;
     overflow: hidden;
     position: relative;
