--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,31 @@
-<p>login works!</p>
+<div class="form-container">
+    <div class="row justify-content-center text-center">
+        <div class="col-12 col-md-4">
+            <div class="form-card">
+                <img src="../../assets/logo.jpg" class="img-fluid" alt="nandbox">
+                <form class="my-5"  [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+                    <div class="form-group text-left position-relative">
+                      <input type="text" formControlName="username" [ngClass]="{ 'is-invalid': submitted && f.username.errors }" class="form-control" placeholder="E-Mail">
+                      <i class="fa fa-user"></i> 
+                      <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
+                          <div *ngIf="f.username.errors.required">Username is required</div>
+                      </div>            
+                    </div>
+                    <div class="form-group text-left position-relative">
+                      <input type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" placeholder="Password">
+                      <i class="fa fa-lock"></i> 
+                      <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
+                        <div *ngIf="f.password.errors.required">Password is required</div>
+                      </div>
+                    </div>
+                    <div class="form-group text-left">
+                        <a href="#">forget password ?</a>
+                    </div>  
+                    <button type="submit" class="btn">Submit</button>
+
+                  </form>
+                  <h2 class="text-with-line position-relative text-center"><a routerLink="/register">Create A New Account</a></h2>
+            </div>
+        </div>
+    </div>
+</div>
