--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,1 +1,41 @@
-<p>register works!</p>
+<div class="form-container">
+    <div class="row justify-content-center text-center">
+        <div class="col-12 col-md-4">
+            <div class="form-card">
+                <img src="../../assets/logo.jpg" class="img-fluid" alt="nandbox">
+                <form class="my-5"  [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+                    <div class="form-group text-left position-relative">
+                      <input type="text" formControlName="username" [ngClass]="{ 'is-invalid': submitted && f.username.errors }" class="form-control" placeholder="Name">
+                      <i class="fa fa-user"></i> 
+                      <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
+                          <div *ngIf="f.username.errors.required">Username is required</div>
+                      </div>            
+                    </div>
+                    <div class="form-group text-left position-relative">
+                        <input type="text" formControlName="username" [ngClass]="{ 'is-invalid': submitted && f.username.errors }" class="form-control" placeholder="E-mail">
+                        <i class="fa fa-envelope"></i> 
+                        <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
+                            <div *ngIf="f.username.errors.required">Email is required</div>
+                        </div>            
+                      </div>        
+                      <div class="form-group text-left position-relative">
+                        <input type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" placeholder="Password">
+                        <i class="fa fa-lock"></i> 
+                        <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
+                          <div *ngIf="f.password.errors.required">Password is required</div>
+                        </div>
+                      </div>
+                    <div class="form-group text-left position-relative">
+                      <input type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" placeholder="Password">
+                      <i class="fa fa-lock"></i> 
+                      <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
+                        <div *ngIf="f.password.errors.required">Password is required</div>
+                      </div>
+                    </div>
+                    <button type="submit" class="btn">Submit</button>
+
+                  </form>
+            </div>
+        </div>
+    </div>
+</div>
