--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,6 +12,13 @@
     <li class="nav-item">
       <a class="nav-link" href="#">Logout</a>
     </li>
+    <li class="nav-item">
+      <a class="nav-link" [routerLink]="['/login']">login</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" [routerLink]="['/register']">register</a>
+    </li>
+
   </ul>
 </nav>
 <!-- create modal-->
