--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
       <a class="nav-link active" (click)="open(content)">Create</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">Logout</a>
+      <a class="nav-link" (click)="logout()">Logout</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" [routerLink]="['/login']">login</a>
