--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,27 +3,20 @@
         <div class="col-12 col-md-4">
             <div class="form-card">
                 <img src="../../assets/logo.jpg" class="img-fluid" alt="nandbox">
-                <form class="my-5"  [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-                    <div class="form-group text-left position-relative">
-                      <input type="text" formControlName="username" [ngClass]="{ 'is-invalid': submitted && f.username.errors }" class="form-control" placeholder="E-Mail">
-                      <i class="fa fa-user"></i> 
-                      <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
-                          <div *ngIf="f.username.errors.required">Username is required</div>
-                      </div>            
-                    </div>
-                    <div class="form-group text-left position-relative">
-                      <input type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" placeholder="Password">
-                      <i class="fa fa-lock"></i> 
-                      <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
-                        <div *ngIf="f.password.errors.required">Password is required</div>
-                      </div>
-                    </div>
-                    <div class="form-group text-left">
-                        <a href="#">forget password ?</a>
-                    </div>  
-                    <button type="submit" class="btn">Submit</button>
+                        <form class="my-5" (ngSubmit)="login()" #form="ngForm">
+                          <div class="form-group text-left position-relative">
+                            <input type="email"  class="form-control" name="email" placeholder="Enter email" [(ngModel)]="model.email" required>
+                            <i class="fa fa-user"></i> 
+                          </div>
+                          <div class="form-group text-left position-relative">
+                              <input type="password" class="form-control"  name="password" placeholder="Password" [(ngModel)]="model.password" required >
+                              <i class="fa fa-envelope"></i> 
+        
+                            </div>        
 
-                  </form>
+                          <button type="submit" [disabled]="submitted || !form.valid" class="btn">Submit</button>
+      
+                        </form>                
                   <h2 class="text-with-line position-relative text-center"><a routerLink="/register">Create A New Account</a></h2>
             </div>
         </div>
